--- a/templates/index.html
+++ b/templates/index.html
@@ -2,18 +2,58 @@
 <html lang="en">
 <head>
     <link href="/static/bootstrap.min.css" rel="stylesheet">
+    <meta name="viewport" content="width=device-width, initial-scale=1 maximum-scale=1, user-scalable=no">
 </head>
 
-<body class="text-center">
+<body class="text-center"
+      style="
+        background-image: url(/static/background.jpg);height: 100%;
+        background-size: cover; background-repeat: no-repeat;
+      "
+>
+<nav class="navbar navbar-light bg-light shadow" >
+  <div class="container-fluid">
+    <a class="display-4" style="color: black; text-decoration: none" href="/">Car damage estimation API</a>
+  </div>
+</nav>
+<div class="container  pt-4" style="background: rgba(255, 255, 255, 0.9);">
+    {% if filenames|length > 0 %}
+        <h6 class="display-6 text-start">Damage summary:</h6>
+        <table class="table table-striped table-bordered ">
+            <thead class="table-success">
+                <th scope="col">#</th>
+                <th scope="col">Filename</th>
+            </thead>
+            <tbody>
+                {% for filename in filenames %}
+                    <tr>
+                        <th scope="row">{{ loop.index }}</th>
+                        <td>{{ filename }}</td>
+                    </tr>
+                {% endfor %}
+            </tbody>
+        </table>
 
-{% for filename in filenames %}
-    <li>{{ filename }}</li>
-{% endfor %}
+        <hr/>
 
-<form action="/" method="POST" enctype="multipart/form-data">
-  <input type="file" id="images" name="images" multiple>
-  <input type="submit">
-</form>
+    {% endif %}
 
+
+
+    <p class="lead text-start">
+        Input images of the damaged car, and we'll assess the damage for you.
+    </p>
+    <form action="/" method="POST" enctype="multipart/form-data">
+        <div class="input-group">
+            <input type="file" name="images" class="form-control" id="inputGroupFile04" aria-describedby="inputGroupFileAddon04" aria-label="Upload" multiple>
+            <label class="input-group-text" for="inputGroupFile02">Upload</label>
+        </div>
+        <div class="p-2">
+            <button type="submit"  id="submit" class="btn btn-success text-left btn-lg" name="response" value="HTML">Evaluate!</button>
+            <button type="submit"  id="submit" class="btn btn-outline-success text-left btn-lg" name="response" value="JSON">Get JSON</button>
+        </div>
+    </form>
+
+</div>
 </body>
 </html>
